--- a/task.html
+++ b/task.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="stylesheet" href="task.css">
     <title>Игра-кликер</title>
 </head>
 <body>
     <header class="header">
         <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
+            <a href="https://netology.ru/" class="logo__link"></a>
         </div>
         <h1 class="header__title">
             Домашнее задание к занятию 1.1 «Возможности JavaScript в браузере». Игра-кликер.
@@ -22,6 +23,13 @@
             <div class="clicker">
                 <div class="clicker__status">
                     Всего кликов <span id="clicker__counter">0</span>
+                </div>
+                <div class="clicker__speed_status">
+                    Скорость клика: <span id="clicker__speed">10</span>
+
+                </div>
+                <div class="clicker__time_status">
+                    <span id="clicker__time">0</span>
                 </div>
                 <img 
                     src="https://i.postimg.cc/T1bWdf2y/1024px-Pepperidge-Farm-Nantucket-Cookie.jpg" 
